--- a/src/css/login.css
+++ b/src/css/login.css
@@ -83,7 +83,8 @@ body {
     transition: all linear 160ms;
     cursor: pointer;
     margin: 0 !important;
-
+    border-radius: 4px;
+    height: 50px;
 }
 
 .possui-conta {
@@ -104,7 +105,7 @@ body {
 
 .btn:hover {
     transform: scale(1.05);
-    background-color: var(--cinza);
+    background-color: var(--azul);
 }
 
 .login-inner{
