--- a/src/css/login.css
+++ b/src/css/login.css
@@ -15,7 +15,7 @@ body {
     height: 100%;
 }
 
-.formLogin {
+.inputLogin {
     display: flex;
     flex-direction: column;
     background-color: #fff;
@@ -24,28 +24,28 @@ body {
     gap: 3px
 }
 
-.formLogin h1 {
+.inputLogin h1 {
     padding: 0;
     margin: 0;
     font-weight: 550;
     font-size: 3.0em;
 }
 
-.formLogin h2 {
+.inputLogin h2 {
     padding: 0;
     margin: 0;
     font-weight: 450;
     font-size: 2.0em;
 }
 
-.formLogin p {
+.inputLogin p {
     display: inline-block;
     font-size: 16px;
     color: #666;
     margin-bottom: 25px;
 }
 
-.formLogin input {
+.inputLogin input {
     padding: 15px;
     font-size: 14px;
     border: 1px solid #ccc;
@@ -57,16 +57,16 @@ body {
 }
 
 
-.formLogin input:focus {
+.inputLogin input:focus {
     border: 1px solid #388eff;
 }
 
-.formLogin label {
+.inputLogin label {
     font-size: 14px;
     font-weight: 600;
 }
 
-.formLogin a {
+.inputLogin a {
     display: inline-block;
     margin-bottom: 20px;
     font-size: 13px;
